# express-blueprint/src/modules/items/item-schema.ts
@@ -1,31 +1,32 @@
 import { Schema, model } from 'mongoose';
-import { Item } from './item-definitions';
-import { BASE_STATISTICS } from '../../config/game-config';
-import { getId } from '../../common/utils';
+import { Item, ItemStatistics } from './item-definitions';
+import { generateId } from '../../common/utils';
 
-const itemSchema = new Schema<Item>(
-    {
-        id: {
-            type: String,
-            default: () => getId(),
-        },
-        name: {
-            type: String,
-            required: true,
-        },
-        requiredLevel: {
-            type: Number,
-            required: true,
-        },
-        statistics: {
-            type: Schema.Types.Mixed, // ItemStatistics
-            default: BASE_STATISTICS,
-        },
-        userId: {
-            type: String,
-            required: true,
-        },
+const itemSchema = new Schema<Item>({
+    id: {
+        type: String,
+        default: () => generateId(),
     },
-);
+    name: {
+        type: String,
+        required: true,
+    },
+    requiredLevel: {
+        type: Number,
+        required: true,
+    },
+    statistics: {
+        type: Schema.Types.Mixed,
+        default: {
+            strength: 0,
+            intelligence: 0,
+            agility: 0,
+        } as ItemStatistics,
+    },
+    userId: {
+        type: String,
+        required: true,
+    },
+});
 
 export const ItemModel = model<Item>('Item', itemSchema);
